<resources>
    <string name="app_name">SuperCV</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="hobby">Hobby</string>
    <string name="notes">Notes</string>
</resources>
