<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/menu_contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_phone_black_24dp"/>
    <item
        android:id="@+id/menu_skills"
        android:icon="@drawable/ic_adb_black_24dp"
        android:title="@string/skills"/>
    <item
        android:id="@+id/menu_experience"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/experience"/>
    <item
        android:id="@+id/menu_education"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="@string/education"/>

    <item
        android:id="@+id/menu_hobby"
        android:icon="@drawable/ic_directions_bike_black_24dp"
        android:title="@string/hobby"/>

    <item
        android:id="@+id/menu_notes"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:title="@string/notes"/>
</group>

</menu>